; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/taskmgr/extr_procpage.c_ProcessPageUpdate.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/taskmgr/extr_procpage.c_ProcessPageUpdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hProcessPageListCtrl = common dso_local global i32 0, align 4
@hProcessPageEndProcessButton = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ProcessPageUpdate() #0 {
  %1 = load i32, i32* @hProcessPageListCtrl, align 4
  %2 = call i64 @ListView_GetSelectedCount(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i32, i32* @hProcessPageEndProcessButton, align 4
  %6 = load i32, i32* @TRUE, align 4
  %7 = call i32 @EnableWindow(i32 %5, i32 %6)
  br label %12

8:                                                ; preds = %0
  %9 = load i32, i32* @hProcessPageEndProcessButton, align 4
  %10 = load i32, i32* @FALSE, align 4
  %11 = call i32 @EnableWindow(i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %8, %4
  ret void
}

declare dso_local i64 @ListView_GetSelectedCount(i32) #1

declare dso_local i32 @EnableWindow(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
